# dstr-lab2

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
ambulances/include/: ambulance_dispatcher.hpp
ambulances/src/: ambulance_dispatcher.cpp
auth/include/: login.hpp  session_manager.hpp
auth/src/: login.cpp  session_manager.cpp
data/: ambulance_schedule.csv  emergency_cases.csv  medical_supply.csv  patient_data.csv  queue.csv  removed_supplies.csv  shift_history.csv  supply_usage_log.csv  user_credentials.csv
emergencies/include/: emergency_department_officer.hpp  emergency_manager.hpp
emergencies/src/: emergency_department_officer.cpp  emergency_manager.cpp
patients/include/: file_handling.hpp  patient_admission_clerk.hpp  patient_array.hpp  queue.hpp
patients/src/: patient_admission_clerk.cpp  patient_array.cpp  queue.cpp
supplies/include/: medical_supply_manager.hpp  stack.hpp  supply_usage_log_dynamic_array.hpp  supply_validation.hpp
supplies/src/: add_supply.cpp  data_handler.cpp  load_supply_data.cpp  medical_supply_manager.cpp  removed_supply.cpp  stack.cpp  supply_usage_log_dynamic_array.cpp  view_supply.cpp
utils/: config.hpp  dynamic_array.cpp  dynamic_array.hpp  entities.hpp  message_handler.hpp  path_utils.cpp  path_utils.hpp  patient.cpp  string_utils.hpp  time_utils.cpp  time_utils.hpp
